k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-hello
  labels:
    app: nodejs-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-hello
  template:
    metadata:
      labels:
        app: nodejs-hello
    spec:
      containers:
        - name: nodejs-hello
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          image: [Your ECR host name/nodejs-hello]    <-- do not forget to replace
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
