k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-hello
spec:
  selector:
    app: nodejs-hello
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
